--- a/src/Components/LeftContainer/LeftContainer.scss
+++ b/src/Components/LeftContainer/LeftContainer.scss
@@ -1,1 +1,35 @@
- 
+@use "../../styles/global" as *;
+@use "../../styles/variables" as *;
+@use "../../styles/global"  as *; 
+
+.activity{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    justify-content: center;                // move this if you want to move main content up or down
+    height: 70vh;
+    width: 60%;
+    background-image: url("../../../public/magic-ball.jpg");
+    background-size: cover;
+
+    &__textbox {
+        border: 1px solid red;
+        padding: 16px;
+        margin-bottom: 15rem;
+    }
+
+    &__button {
+        display: flex;
+        justify-content: center;
+        border: 1px solid green;
+
+        &--clicker {
+            color: $MainColour;
+            text-align: center;
+            padding: 1.25rem;
+            border-radius: $buttonRadius;
+            border: none;
+            margin: 1rem;
+        }
+    }
+}
