style added to left side
basic overview of what we were thinking, will connect with team and get thoughts

--- a/src/Components/LeftContainer/LeftContainer.scss
+++ b/src/Components/LeftContainer/LeftContainer.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     border: 1px solid black;
-    justify-content: center;                // move this if you want to move main content up or down
+               // move this if you want to move main content up or down
     height: 70vh;
     width: 60%;
     background-image: url("../../../public/magic-ball.jpg");
@@ -14,8 +14,13 @@
 
     &__textbox {
         border: 1px solid red;
-        padding: 16px;
+        padding: 1rem;
         margin-bottom: 15rem;
+        color: $MainColour;
+
+        &--font {
+            margin-top: .75rem;
+        }
     }
 
     &__button {
@@ -24,7 +29,8 @@
         border: 1px solid green;
 
         &--clicker {
-            color: $MainColour;
+            width: 400px;
+            background-color: $MainColour;
             text-align: center;
             padding: 1.25rem;
             border-radius: $buttonRadius;
