BottomHalf general styling completed, touch ups to be done

--- a/src/Components/BottomHalf/BottomHalf.css
+++ b/src/Components/BottomHalf/BottomHalf.css
@@ -1,1 +1,4 @@
-/*# sourceMappingURL=BottomHalf.css.map */
+.containerBottomHalf {
+  display: flex;
+  flex-direction: row;
+}/*# sourceMappingURL=BottomHalf.css.map */
