styled bottom left container
need to go back to bottom right and fix sizing issue, then to top and clean up

--- a/src/Components/LeftContainerBottom/LeftContainerBottom.scss
+++ b/src/Components/LeftContainerBottom/LeftContainerBottom.scss
@@ -1,9 +1,16 @@
+@use "../../styles/global" as *;
+@use "../../styles/variables" as *;
+@use "../../styles/global"  as *; 
+
 .container {
-    background-color: #2F3E46;
-    color: #000000;
+    background-color: $MainColour;
+    color: $OffWhite;
     width: 50vw;
     display: flex;
     flex-direction: column;
+    padding: 1rem;
+    align-items: center;
+
     &__card {
         width: 44vw;
         margin-left: 2rem;
@@ -12,50 +19,85 @@
         padding-bottom: 1rem;
         border-radius: .25rem;
     }
+
     &__card2 {
         width: 44vw;
-        margin-left: 2rem;
+        margin: 1rem;
         background-color: #84A98C;
         padding-left: 1rem;
         padding-bottom: 1rem;
         border-radius: .25rem;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        &--title {
+            color: $White;
+        }
     }
+
     &__top {
-        padding-bottom: 2rem;
-        padding-top: 2rem;
+        padding: .5rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        &--button {
+            margin-left: .5rem;
+            width: 90px;
+            height: 2rem;
+            border-radius: $CircleButton;
+            border: 2px solid $Fourth;
+            color: #FFFFFF;
+            background-color: transparent;
+            margin-top: .25rem;
+            
+        }
+
+        &--form {
+            width: 30vw;
+            border-radius: $CircleButton;
+            border: none;
+        }
+
+        &--title {
+            margin: 0 0 .25rem 0;
+        }
     }
     &__bottom {
-        padding-bottom: 2rem;
+        margin-bottom: 2.2rem;
     }
 }
 
 .submitBox {
-    color: #000000;
     width: 13vw;
     height: 2rem;
     border-radius: .25rem;
-    border: #84A98C;
+    border: $Fourth
 }
 .button1 {
-    width: 10vw;
-    height: 2rem;
-    border-radius: 2rem;
+    width: 15rem;
+    background-color: $Fourth;
+    text-align: center;
+    padding: 1.25rem;
+    border-radius: $buttonRadius;
     border: none;
-    color: #84A98C;
-    background-color: #FFFFFF;
+    color: $MainColour
 }
+
 .button2 {
-    width: 10vw;
+    width: 40vw;
     height: 2rem;
-    border-radius: 2rem;
+    border-radius: $CircleButton;
     border: none;
     color: #84A98C;
     background-color: #FFFFFF;
+    margin-bottom: .25rem;
 }
 .button3 {
-    width: 10vw;
+    width: 40vw;
     height: 2rem;
-    border-radius: 2rem;
+    border-radius: $CircleButton;
     border: 2px solid #FFFFFF;
     color: #FFFFFF;
     background-color: #84A98C;
