--- a/src/Components/LeftContainer/LeftContainer.scss
+++ b/src/Components/LeftContainer/LeftContainer.scss
@@ -5,7 +5,7 @@
 .activity{
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
+    border: 1px solid pink;
     width: 60%;
     background-image: url("../../../public/magic-ball.jpg");
     background-size: cover;
