--- a/src/Components/RightContainerBottom/RightContainerBottom.scss
+++ b/src/Components/RightContainerBottom/RightContainerBottom.scss
@@ -8,16 +8,15 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    height: 24rem;
+
     background-color:$MainColour;
 
     &__card {
         margin: 3rem auto 0 auto;
-        color: #FFFFFF;
+        color: $White;
         padding-left: 1rem;
         width: 40vw;
         height: 18rem;
-        background-color: rgba (53,79,82, .5);
         display: flex;
         justify-content: center;
         align-items: center;
@@ -29,7 +28,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            color: black;
+            color: $Black;
         }
     }
 }
