--- a/src/Components/LeftContainer/LeftContainer.scss
+++ b/src/Components/LeftContainer/LeftContainer.scss
@@ -11,12 +11,15 @@
     background-position: right;
 
     &__textbox {
-        padding: 1rem;
+        padding-left: 1rem;
         margin-bottom: 15rem;
         color: $MainColour;
 
         &--font {
-            margin-top: .75rem;
+            margin: 0;
+            color: $OffWhite;
+            font-size: 1.5rem;
+            padding-top: 1rem;
         }
     }
 
